<resources>
    <string name="app_name">prueba</string>
    <string name="title">UnaRide</string>
    <string name="login">Inicio de sesión</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="user_label">Usuario</string>
    <string name="password_label">Contraseña</string>
    <string name="label_bus_icon">icono del título</string>
    <string name="user_icon">icono de usuario</string>
    <string name="password_icon">icono de contraseña</string>
    <string name="una_logo">logo UNA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>