<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/light_main_login_space"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_label"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="60dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_bold"
                android:gravity="center_vertical|end"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/label_bus_icon"
                android:paddingStart="0dp"
                android:paddingEnd="120dp"
                app:srcCompat="@drawable/round_directions_bus_24" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@drawable/buseta">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/light_main_login_space"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_login_space"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/login"
                    android:textColor="#F8F8F8"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/round_person_2_24"
                    android:contentDescription="@string/user_icon" />


                <EditText
                    android:hint="Usuario"
                    android:importantForAccessibility="no"
                    android:id="@+id/editTextText"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/roud_white_square"
                    android:backgroundTint="#ffffff"
                    android:ems="10"
                    android:inputType="text"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/round_vpn_key_24"
                    android:contentDescription="@string/password_icon" />

                <EditText
                    android:hint="Contraseña"
                    android:importantForAccessibility="no"
                    android:id="@+id/editTextTextPassword2"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/roud_white_square"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="160dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:backgroundTint="#FFFFFFFF"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/login_button"
                    android:textColor="#000000
    " />
            </LinearLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/roud_white_square"
                android:padding="14dp">

                <ImageView
                    android:contentDescription="@string/una_logo"
                    android:id="@+id/imageView13"
                    android:layout_width="146dp"
                    android:layout_height="123dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/logo"
                    android:paddingHorizontal="70dp" />
            </FrameLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>


